tests/snapshots/snapshot_tests__concrete_distributed_protocols_depth_5__learning_switch_ternary.snap
---
source: tests/snapshot_tests.rs
expression: result
---
VmtSnapshotResult {
    example_name: "examples/distributed_protocols/learning_switch_ternary/learning_switch_ternary.vmt",
    config: VmtSnapshotConfig {
        strategy: Concrete,
        solver: Z3,
        target_depth: 5,
    },
    outcome: BoundedSafe {
        solver_checks: 5,
    },
}
