tests/snapshots/snapshot_tests__concrete_distributed_protocols_depth_5__lock_server_sync.snap
---
source: tests/snapshot_tests.rs
expression: result
---
VmtSnapshotResult {
    example_name: "examples/distributed_protocols/lock_server_sync/lock_server_sync.vmt",
    config: VmtSnapshotConfig {
        strategy: Concrete,
        solver: Z3,
        target_depth: 5,
    },
    outcome: BoundedSafe {
        solver_checks: 5,
    },
}
